syntax = "proto3";

package pb;

import "user.proto";
// Removed the import statement for "user.proto"
import "google/protobuf/timestamp.proto";


option go_package = "github.com/vantu-fit/master-go-be/pb";

message LoginUserRequest {
    string username = 1;
    string password = 2;
    
}



message LoginUserResponse {
    string access_token = 1;
    google.protobuf.Timestamp access_token_expried_at = 2 ; 
    string refresh_token =3 ; 
    google.protobuf.Timestamp refresh_token_expried_at =4 ; 
    string session_id = 5 ; 
    User user = 6 ;
}



